--- a/lee/css/style.css
+++ b/lee/css/style.css
@@ -301,7 +301,6 @@ main {
 }
 
 section h2 {
-  color: var(--maincolor-main-1000, #bfa473);
   text-align: left;
   font-family: var(--1920-56-font-family, "Assistant-Bold", sans-serif);
   font-size: var(--1920-56-font-size, 56px);
@@ -321,7 +320,9 @@ section h2 {
 
 
 .on-alr {
-    margin-top: 250px; 
+  color: #ffffff;
+    margin-top: 120px; 
+/*     margin-bottom: px;  */
     margin-left: 200px;
     font-size: 56px;
 }
@@ -334,11 +335,12 @@ section h2 {
   /* 버튼 간 간격 */
   margin-left: 200px;
   margin-bottom: 40px;
+  margin-top: 10px;
 }
 
 .button-group button {
-  padding: 8px 30px;
-  font-size: 24px;
+  padding: 13px 30px;
+  font-size: 18px;
   color: #fff;
   border-radius: 25px;
   cursor: pointer;
@@ -348,9 +350,17 @@ section h2 {
 }
 
 .button-group button:hover {
-  transform: translateY(-4px);
-  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.5), -6px -6px 12px rgba(255, 255, 255, 0.15);
-  background: linear-gradient(145deg, #c5a87f76, #a8855588);
+    border: 1px solid rgba(245, 245, 245, 1);
+    background: rgba(245, 245, 245, 0.03);
+    box-shadow:
+        0 0 8px rgba(245, 245, 245, 0.3),
+        0 0 15px rgba(245, 245, 245, 0.2),
+        inset 0 0 10px rgba(245, 245, 245, 0.1);
+    text-shadow:
+        0 0 5px rgba(245, 245, 245, 0.4);
+    transform: translateY(-2px) scale(1.01);
+ /*  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.5), -6px -6px 12px rgba(255, 255, 255, 0.15); */
+/*   background: linear-gradient(145deg, #c5a87f76, #a8855588); */
 }
 
 
@@ -361,9 +371,9 @@ section h2 {
   /* 오른쪽 끝 배치 */
   margin-right: 200px;
   /* 오른쪽 끝에서 안쪽간격 */
-  padding: 12px 30px;
+  padding: 7px 30px;
   /* 위아래 8px, 좌우 40px */
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 500;
   /* 폰트굵기 */
   color: #ffffff;
@@ -389,14 +399,20 @@ section h2 {
   /* 옵션 텍스트 색 */
   background: rgb(0, 0, 0);
   /* 옵션 배경 */
- font-size: 23px;
+ font-size: 18px;
 }
 
 
 .Filter:hover {
-  transform: translateY(-4px);
-  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.5), -6px -6px 12px rgba(255, 255, 255, 0.15);
-  background: linear-gradient(145deg, #c5a87f76, #a8855588);
+    border: 1px solid rgba(245, 245, 245, 1);
+    background: rgba(245, 245, 245, 0.03);
+    box-shadow:
+        0 0 8px rgba(245, 245, 245, 0.3),
+        0 0 15px rgba(245, 245, 245, 0.2),
+        inset 0 0 10px rgba(245, 245, 245, 0.1);
+    text-shadow:
+        0 0 5px rgba(245, 245, 245, 0.4);
+    transform: translateY(-2px) scale(1.01);
 }
 
 
@@ -410,7 +426,6 @@ ul.poster-list {
   /* 양쪽 200px 여백 */
   /* 한 줄로 유지 */
 }
-
 
 
 ul.poster-list li {
@@ -451,6 +466,61 @@ ul.poster-list li {
   border-radius: 8px;
   /* 약간 둥글게 */
 }
+
+
+ul.poster-list2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 50px;
+  /* 5개 박스 사이 자동 간격 */
+  margin: 0 200px;
+  margin-top: 80px; 
+  
+  /* 양쪽 200px 여백 */
+  /* 한 줄로 유지 */
+}
+
+
+ul.poster-list2 li {
+  width: 268px;
+  margin-bottom: 50px;
+}
+
+.poster-title {
+  display: block;
+  color: #948484;
+  font-weight: 500;
+  font-size: 20px;
+  margin-top: 20px;
+  /* 위쪽 간격 */
+  /*   text-align: center; */
+  line-height: 1.5;
+}
+
+.poster-list2 img {
+  width: 268px;
+  height: 390px;
+  border-radius: 5px;
+  filter: brightness(0.9);
+  /* 이미지어둡게 조절 */
+  cursor: pointer;
+}
+
+
+.poster-list2 li img {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.poster-list2 li:hover img {
+  transform: scale(1.05);
+  /* 5% 확대 */
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
+  /* 그림자 추가 */
+  border-radius: 8px;
+  /* 약간 둥글게 */
+}
+
 
 /* Pagination + Search Container */
 
@@ -503,10 +573,11 @@ ul.poster-list li {
 
 .search-box button {
   padding: 12px 18px;
-  background-color: #6c63ff;
+  background-color: #000000;
   color: white;
   border: none;
   border-radius: 30px;
+  border: 1px solid var(--Wcolor);
   font-weight: 500;
   font-size: 18px;
   cursor: pointer;
@@ -515,7 +586,7 @@ ul.poster-list li {
 }
 
 .search-box button:hover {
-  background-color: #5a54e7;
+  background: rgba(245, 245, 245, 0.5);
 }
 
 
@@ -619,13 +690,17 @@ ul.poster-list li {
 
 
 .last-section {
+  background-color: #fff;
   width: 100%;
-  height: 80vh;
+  height: 120vh;
+  padding-top: 20vh;  /* 위쪽 여백 추가 */
+  padding-bottom: 30vh; /* 아래쪽 여백 추가 */
   /* outo; 150vh 온에어랑 큰포스터 둘의 간격*/
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 60px;
+   align-items: center;  /* 수평 가운데 정렬 */
+  margin-bottom: 50px;
   /* on-air와의 간격 */
 }
 
@@ -641,20 +716,45 @@ ul.poster-list li {
 
 section h2 {
   font-size: 56px;
-  margin-top: 150px; /* 기존 200px → 50px으로 줄임 */
+  color: #000000;
+  margin-top: 80px; /* 기존 200px → 50px으로 줄임 */
   margin-bottom: 50px; /* 섹션 내 제목과 콘텐츠 간격 */
 }
 
+.signature-text {
+  font-size: 24px;
+  color: #fff; /* 텍스트 색상 */
+  margin-right: 10px; /* 텍스트와 버튼 사이에 간격을 둡니다 */
+}
+
+.more-btn {
+    font-size: 18px;
+    text-transform: uppercase;
+    width: 111px;
+    height: 40px;
+    background: var(--Wcolor); 
+    border: 1px solid var(--Bcolor);
+    border-radius: 32px;
+    cursor: pointer;
+    margin-right: 290px;
+    position: relative;
+    top: -100px; 
+    padding-top: 8px; 
+  padding-bottom: 5px; }
+
+.more-btn:hover {
+  border-color: #333; /* hover 시 테두리 색상 변화 */
+}
 
 
 .last-section span {
-  color: #FFF;
+  color: #000000;
   font-size: 24px;
   font-weight: 500;
   line-height: normal;
   display: block;
   text-align: center;
-  margin-top: 35px;
+  margin-top: 65px;
 }
 
 
