--- a/Work_Ryu/css/work_main.css
+++ b/Work_Ryu/css/work_main.css
@@ -1670,11 +1670,11 @@ section.chat_event_section .reply_profile .icon_bg {
 
 section.chat_event_section .reply_profile .icon_img {
     position: absolute;
-    bottom: -2px;
-    right: -2px;
-    width: 20px;
-    height: 20px;
-    object-fit: contain;
+    /* bottom: -2px;
+    right: -2px; */
+    width: 24px;
+    height: 36px;
+    object-fit: cover;
 }
 
 section.chat_event_section .reply_profile .profile_name {
