--- a/moon/css/pg-style.css
+++ b/moon/css/pg-style.css
@@ -1,12 +1,16 @@
 @charset "utf-8";
+
 :root {
   --space-w-1920: 200px;
 }
-*, *::after,*::before {
+
+*,
+*::after,
+*::before {
   caret-color: transparent;
   box-sizing: border-box;
-  -webkit-box-sizing:border-box;
-  -moz-box-sizing:border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 
@@ -16,10 +20,14 @@ button {
   border: none;
   box-shadow: none;
   cursor: pointer;
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10+ */
-  user-select: none; /* Standard */
+  -webkit-user-select: none;
+  /* Safari */
+  -ms-user-select: none;
+  /* IE 10+ */
+  user-select: none;
+  /* Standard */
 }
+
 /* .mirror{
   -webkit-box-reflect: below 0px linear-gradient(transparent 85%, rgba(13, 3, 28, 0.5) 100%);
   pointer-events: none;
@@ -27,16 +35,18 @@ button {
 } */
 
 
-.swiper-slide{
+.swiper-slide {
   filter: brightness(30%);
 }
-.swiper-slide-prev, .swiper-slide-next {
+
+.swiper-slide-prev,
+.swiper-slide-next {
   filter: brightness(60%);
   transition: filter 0.3s;
 }
 
 .swiper-slide-active {
-  opacity:1;
+  opacity: 1;
   filter: brightness(100%);
 }
 
@@ -45,7 +55,7 @@ main {
   width: 100vw;
 }
 
-.sect_inner{
+.sect_inner {
   width: 100%;
   padding-inline: 200px;
 }
@@ -65,7 +75,7 @@ h2 {
   width: 100%;
   height: 100vh;
   /* background: linear-gradient(transparent 20%, #fff 40%); */
-  padding-block: 300px;
+  /* padding-block: 300px; */
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -80,7 +90,7 @@ h2 {
   position: relative;
   align-items: center;
   justify-content: space-between;
-  
+
 }
 
 
@@ -126,6 +136,7 @@ h2 {
     transform: translateY(0px);
   }
 }
+
 @keyframes floating-40 {
   0% {
     transform: translateY(0px);
@@ -145,7 +156,8 @@ h2 {
 .contest-winner {
   background: var(--Bcolor);
   width: 100%;
-  overflow: hidden;
+  height: 7000px;
+  /* overflow: hidden; */
   padding-block: 200px;
 }
 
@@ -155,6 +167,7 @@ h2 {
   gap: 32px;
   width: 100%;
   position: relative;
+  background: #ccc;
 }
 
 .contest-winner .top .decoImg {
@@ -258,7 +271,10 @@ h2 {
   position: relative;
   align-self: stretch;
 }
-#goldimg, #silverimg, #popularimg{
+
+#goldimg,
+#silverimg,
+#popularimg {
   position: absolute;
   right: 0;
   top: 0;
@@ -323,8 +339,8 @@ h2 {
   color: #fff;
   padding: 464px 200px 250px 200px;
 }
-.running-contest .sect_inner{
-}
+
+.running-contest .sect_inner {}
 
 .running-contest .title {
   margin-bottom: 42px;
@@ -528,8 +544,8 @@ h2 {
   position: relative;
   margin-bottom: 40px;
 }
-ㄴ
-.creativeGallery .con {
+
+ㄴ .creativeGallery .con {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -564,6 +580,7 @@ h2 {
   overflow: hidden;
   padding-bottom: 40px;
 }
+
 .creativeGallery .fanarts .img_popular .swiper {
   /* width: 823px; */
   margin: 0 auto;
@@ -577,7 +594,7 @@ h2 {
 }
 
 .creativeGallery .fanarts .swiper ul.swiper-wrapper li.swiper-slide {
-   width: 823px;
+  width: 823px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -603,7 +620,7 @@ h2 {
   user-select: none;
 }
 
-.creativeGallery .fanarts .img_popular ul.swiper-wrapper .fan-img-wrap .fan-img{}
+.creativeGallery .fanarts .img_popular ul.swiper-wrapper .fan-img-wrap .fan-img {}
 
 .creativeGallery .fanarts .swiper ul.swiper-wrapper .swiper-slide .info-overlay {
   border-radius: 20px;
@@ -644,8 +661,10 @@ h2 {
   font: var(--font-1920_1024-body-L-20);
   padding-right: 34px;
   /* position: relative; */
-  overflow: hidden;           /* 넘치는 내용을 숨깁니다. */
-  text-overflow: ellipsis;    /* 숨겨진 텍스트에 말줄임표(...)를 표시합니다. */
+  overflow: hidden;
+  /* 넘치는 내용을 숨깁니다. */
+  text-overflow: ellipsis;
+  /* 숨겨진 텍스트에 말줄임표(...)를 표시합니다. */
   white-space: nowrap;
 }
 
@@ -724,6 +743,7 @@ h2 {
   gap: 10px;
   overflow: hidden;
 }
+
 .community .sect_inner {
   width: 100%;
   display: flex;
@@ -770,12 +790,12 @@ h2 {
 
 }
 
-.community .title .subtit .com_btn_wrap .com_toggle_btn.active{
+.community .title .subtit .com_btn_wrap .com_toggle_btn.active {
   color: #4f485a;
 }
 
 /* 커뮤니티-아티클 */
-.community .articles > * {
+.community .articles>* {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -792,7 +812,7 @@ h2 {
 
 .community .articles .comm_gallery .swiper-wrapper {
   padding-right: 200px;
-  
+
 }
 
 .community .articles .comm_gallery .swiper-wrapper .swiper-slide {
@@ -812,14 +832,17 @@ h2 {
   display: block;
   width: 100%;
   height: 100%;
-  position: relative; /* info-overlay 기준 */
+  position: relative;
+  /* info-overlay 기준 */
 }
+
 .community .articles .comm_gallery .swiper-wrapper .swiper-slide .comm-img-wrap img {
   width: 100%;
   aspect-ratio: 16/9;
   object-fit: cover;
   object-position: center;
 }
+
 .community .articles .comm_gallery .swiper-wrapper .swiper-slide .comm-img-wrap .num {
   font: 300 72px/100% "Pretendard", sans-serif;
   position: absolute;
@@ -889,13 +912,14 @@ h2 {
 }
 
 /* 커뮤니티 갤러리 하단 리스트 */
-.community ul.article_list{
+.community ul.article_list {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
-.community ul.article_list li{
+
+.community ul.article_list li {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -903,17 +927,19 @@ h2 {
   justify-content: left;
 }
 
-.community ul.article_list li a{
+.community ul.article_list li a {
   width: 100%;
   display: flex;
   flex-direction: row;
   gap: 18px;
 }
-.community ul.article_list li .num{
+
+.community ul.article_list li .num {
   color: var(--Bcolor);
   text-align: left;
   font: 700 26px/130% "Assistant", sans-serif;
 }
+
 .community ul.article_list li .comm_article_info {
   display: flex;
   width: 100%;
@@ -922,17 +948,20 @@ h2 {
   align-items: center;
   justify-content: left;
 }
-.community ul.article_list li .comm_article_info em{
-   color: #bdbac1;
+
+.community ul.article_list li .comm_article_info em {
+  color: #bdbac1;
   text-align: left;
   font: 300 26px/130% "Assistant", sans-serif;
 }
+
 .community ul.article_list li .comm_article_info span {
   display: flex;
   flex-direction: row;
   gap: 12px;
   align-items: center;
 }
+
 .community ul.article_list li .comm_article_info span h5 {
   color: var(--Bcolor);
   text-align: left;
@@ -941,6 +970,7 @@ h2 {
   overflow: hidden;
   white-space: nowrap;
 }
+
 .community ul.article_list li .comm_article_info span p {
   color: var(--MainColor);
   text-align: left;
@@ -967,14 +997,17 @@ h2 {
   flex-direction: column;
   gap: 50px; */
 }
-.vote .title h2{
+
+.vote .title h2 {
   margin-bottom: 18px;
 }
-.vote .title h3{
+
+.vote .title h3 {
   font: 600 26px/130% "Assistant", sans-serifs;
   margin-bottom: 4px;
 }
-.vote .title p{
+
+.vote .title p {
   color: #b8b8b8;
   font: 400 20px/130% "Assistant", sans-serif;
   margin-bottom: 42px;
@@ -1099,7 +1132,8 @@ h2 {
   align-items: center;
   gap: 10px;
 }
-.vote-card progress{
+
+.vote-card progress {
   width: 100%;
   height: 10px;
   background-color: #e0e0e0;
@@ -1118,7 +1152,8 @@ h2 {
 .vote-card .progress-bar {
   height: 100%;
   background-color: var(--subPurple);
-  width: var(--progress-width, 0%); /* CSS 변수 사용 */
+  width: var(--progress-width, 0%);
+  /* CSS 변수 사용 */
   border-radius: 15px;
 }
 
@@ -1172,11 +1207,12 @@ h2 {
   color: var(--Wcolor);
   font: 400 20px/130% "Assistant", sans-serif;
   opacity: 0;
-  transition: opacity 0.5s 0.5s; /* Flips after animation */
+  transition: opacity 0.5s 0.5s;
+  /* Flips after animation */
 }
 
-.vote-container.voted + .vote-footer-message {
-    opacity: 1;
+.vote-container.voted+.vote-footer-message {
+  opacity: 1;
 }
 
 .vote-again-btn {
@@ -1190,9 +1226,11 @@ h2 {
   font-size: 16px;
   cursor: pointer;
 }
-.vote-again-btn i{
+
+.vote-again-btn i {
   margin-left: 8px;
 }
+
 /* vote-again-btn 아이콘 회전 애니메이션 */
 .vote-again-btn i.rotate-anim {
   display: inline-block;
@@ -1200,6 +1238,11 @@ h2 {
 }
 
 @keyframes rotateOne {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
